--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,28 @@
 @import "tailwindcss";
+
+@theme {
+  --color-primary: #4f46e5;
+  --color-secondary: #f28d35;
+  --color-analogous1: #6a44f2;
+  --color-analogous2: #1cbddd;
+  --color-triadic1: #52378c;
+  --color-dark1: #78bf91;
+  --color-dark2: #4dca79;
+  --color-text: #2f2f2f;
+  --color-textSubtle: #9c9991;
+  --color-accent1: #e2f2fe;
+  --color-accent2: #fff8e0;
+  --color-error: #ff0335;
+  --color-success: #5eb30b;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+
   background-color: #242424;
 
   font-synthesis: none;
