--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
@@ -25,7 +26,7 @@ html, body {
   --color-accent2: #fff8e0;
   --color-error: #ff0335;
   --color-success: #5eb30b;
-  --color-faq-bg: #FAF8FF;
+  --color-faq-bg: #faf8ff;
 
   --font-family-inter: "Inter", sans-serif;
   --font-family-poppins: "Poppins", sans-serif;
